syntax = "proto3";

option java_package = "com.github.j5ik2o.akka.persistence.kafka";
option optimize_for = SPEED;

message JournalFormat {
   string persistence_id = 1;
   int64 sequence_number = 2;
   bool deleted = 3;
   string manifest = 4;
   string writer_uuid = 5;
   int64 timestamp = 6;
   bytes persistent_repr = 7;
   repeated string tags = 8;
}

message SnapshotMetadataFormat {
   string persistence_id = 1;
   int64 sequence_number = 2;
   int64 timestamp = 3;
}